made services page with grid layout

--- a/html/index.html
+++ b/html/index.html
@@ -3,10 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="../css/styles.css" />
     <title>Sahil Shetty - Portfolio</title>
   </head>
   <body>
+    <!-- Header element -->
     <header>
       <nav>
         <img id="logo" src="../assets/logo.svg" alt="Sahil Shetty logo" />
@@ -20,5 +27,57 @@
         </ul>
       </nav>
     </header>
+    <!-- Main element -->
+    <main>
+      <!-- Services section -->
+      <section id="services">
+        <h2 class="heading heading-main">Services</h2>
+        <p class="desc">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime
+          distinctio excepturi, nostrum facere sunt optio aspernatur soluta
+          incidunt doloremque quaerat fugiat at unde mollitia aliquam obcaecati
+          blanditiis expedita id quos enim? Voluptate doloribus laborum
+          quibusdam nesciunt id sit corporis in, ducimus eveniet natus
+          recusandae cumque odit sequi, ipsa praesentium ex.
+        </p>
+        <div class="service-container">
+          <div class="service">
+            <div id="graphic-design-image"></div>
+            <h3 class="heading heading-secondary">Graphic Design</h3>
+            <p class="desc">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+              quos, voluptates, quod, quibusdam quia quae doloribus
+              necessitatibus quas quidem voluptate quae doloribus necessitatibus
+              quas quidem voluptate.
+            </p>
+          </div>
+          <div class="service">
+            <div id="web-development-image"></div>
+            <h3 class="heading heading-secondary">Web Development</h3>
+            <p class="desc">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+              quos, voluptates, quod, quibusdam quia quae doloribus
+              necessitatibus quas quidem voluptate quae doloribus necessitatibus
+              quas quidem voluptate.
+            </p>
+          </div>
+          <div class="service">
+            <div id="ui-ux-image"></div>
+            <h3 class="heading heading-secondary">UI/UX Design</h3>
+            <p class="desc">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+              quos, voluptates, quod, quibusdam quia quae doloribus
+              necessitatibus quas quidem voluptate quae doloribus necessitatibus
+              quas quidem voluptate.
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
+    <!-- Footer element -->
+    <footer>
+      <!-- Footer element -->
+      <p class="desc" id="footer">Made with &hearts; by Sahil Shetty</p>
+    </footer>
   </body>
 </html>
