added home page

--- a/html/index.html
+++ b/html/index.html
@@ -29,6 +29,29 @@
     </header>
     <!-- Main element -->
     <main>
+      <!-- Home section -->
+      <section id="home">
+        <div class="home-container">
+          <h1 class="heading heading-hero">
+            Hello I'm
+            <span class="gradient gradient-text">Sahil</span>,<br />full-stack
+            web<br />developer based in<br /><span
+              class="gradient gradient-text"
+              >Canada</span
+            >.
+          </h1>
+          <p class="desc home-desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+            adipisci temporibus, aliquam amet maiores enim.
+          </p>
+          <div class="btn-container">
+            <a href="#contact" class="gradient btn">Get in Touch</a>
+            <a href="#projects" class="btn" id="project-btn">View Projects</a>
+          </div>
+        </div>
+        <div class="hero-image"></div>
+      </section>
+
       <!-- Services section -->
       <section id="services">
         <h2 class="heading heading-main">Services</h2>
@@ -45,30 +68,27 @@
             <div id="graphic-design-image"></div>
             <h3 class="heading heading-secondary">Graphic Design</h3>
             <p class="desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-              quos, voluptates, quod, quibusdam quia quae doloribus
-              necessitatibus quas quidem voluptate quae doloribus necessitatibus
-              quas quidem voluptate.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
+              possimus, neque perspiciatis obcaecati asperiores odio deserunt.
+              Temporibus doloribus neque vel?
             </p>
           </div>
           <div class="service">
             <div id="web-development-image"></div>
             <h3 class="heading heading-secondary">Web Development</h3>
             <p class="desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-              quos, voluptates, quod, quibusdam quia quae doloribus
-              necessitatibus quas quidem voluptate quae doloribus necessitatibus
-              quas quidem voluptate.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui
+              officia ea corporis perferendis dicta aliquid excepturi
+              dignissimos est ad recusandae?
             </p>
           </div>
           <div class="service">
             <div id="ui-ux-image"></div>
             <h3 class="heading heading-secondary">UI/UX Design</h3>
             <p class="desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-              quos, voluptates, quod, quibusdam quia quae doloribus
-              necessitatibus quas quidem voluptate quae doloribus necessitatibus
-              quas quidem voluptate.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui
+              officia ea corporis perferendis dicta aliquid excepturi
+              dignissimos est ad recusandae?
             </p>
           </div>
         </div>
