added rest of the pages

--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,12 @@
     <!-- Header element -->
     <header>
       <nav>
-        <img id="logo" src="../assets/logo.svg" alt="Sahil Shetty logo" />
+        <img
+          id="logo"
+          src="../assets/logo.svg"
+          alt="Sahil Shetty logo"
+          draggable="false"
+        />
         <ul>
           <li><a href="#home">Home</a></li>
           <li><a href="#services">Services</a></li>
@@ -34,9 +39,8 @@
         <div class="home-container">
           <h1 class="heading heading-hero">
             Hello I'm
-            <span class="gradient gradient-text">Sahil</span>,<br />full-stack
-            web<br />developer based in<br /><span
-              class="gradient gradient-text"
+            <span class="gradient gradient-text">Sahil</span>,<br />A full-stack
+            <br />developer based in<br /><span class="gradient gradient-text"
               >Canada</span
             >.
           </h1>
@@ -56,42 +60,224 @@
       <section id="services">
         <h2 class="heading heading-main">Services</h2>
         <p class="desc">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime
-          distinctio excepturi, nostrum facere sunt optio aspernatur soluta
-          incidunt doloremque quaerat fugiat at unde mollitia aliquam obcaecati
-          blanditiis expedita id quos enim? Voluptate doloribus laborum
-          quibusdam nesciunt id sit corporis in, ducimus eveniet natus
-          recusandae cumque odit sequi, ipsa praesentium ex.
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo facilis
+          voluptas est, adipisci fugit exercitationem tempore. Hic officiis ex
+          cumque.
         </p>
         <div class="service-container">
           <div class="service">
             <div id="graphic-design-image"></div>
             <h3 class="heading heading-secondary">Graphic Design</h3>
             <p class="desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
-              possimus, neque perspiciatis obcaecati asperiores odio deserunt.
-              Temporibus doloribus neque vel?
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia,
+              at!
             </p>
           </div>
           <div class="service">
             <div id="web-development-image"></div>
             <h3 class="heading heading-secondary">Web Development</h3>
             <p class="desc">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui
-              officia ea corporis perferendis dicta aliquid excepturi
-              dignissimos est ad recusandae?
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Cupiditate, nisi!
             </p>
           </div>
           <div class="service">
             <div id="ui-ux-image"></div>
             <h3 class="heading heading-secondary">UI/UX Design</h3>
             <p class="desc">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui
-              officia ea corporis perferendis dicta aliquid excepturi
-              dignissimos est ad recusandae?
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero,
+              doloribus.
             </p>
           </div>
         </div>
+      </section>
+      <!-- Projects section -->
+      <section id="projects">
+        <h2 class="heading heading-main">Projects</h2>
+        <p class="desc">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo facilis
+          voluptas est, adipisci fugit exercitationem tempore. Hic officiis ex
+          cumque.
+        </p>
+        <div class="project-container">
+          <div class="project-desc">
+            <h3 class="heading heading-secondary">Project 1</h3>
+            <p class="desc">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
+              possimus, neque perspiciatis obcaecati asperiores odio deserunt.
+              Temporibus doloribus neque vel?
+            </p>
+            <a href="./project-view.html" class="gradient btn">View Project</a>
+          </div>
+          <img
+            class="project-img"
+            draggable="false"
+            src="../assets/movie-project.webp"
+            alt="movie project picture"
+          />
+        </div>
+        <div class="project-container">
+          <img
+            class="project-img"
+            draggable="false"
+            src="../assets/project-2.webp"
+            alt="movie project picture"
+          />
+          <div class="project-desc">
+            <h3 class="heading heading-secondary">Project 2</h3>
+            <p class="desc">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
+              possimus, neque perspiciatis obcaecati asperiores odio deserunt.
+              Temporibus doloribus neque vel?
+            </p>
+            <a href="./project-view.html" class="gradient btn">View Project</a>
+          </div>
+        </div>
+      </section>
+      <!-- Blog section -->
+      <section id="blog">
+        <h2 class="heading heading-main">Blog</h2>
+        <p class="desc">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo facilis
+          voluptas est, adipisci fugit exercitationem tempore. Hic officiis ex
+          cumque.
+        </p>
+        <div class="blog-container">
+          <div class="article">
+            <img
+              class="article-img"
+              draggable="false"
+              src="../assets/article-1.webp"
+              alt="blog picture"
+            />
+            <h3 class="heading heading-secondary">Article 1</h3>
+            <p class="desc">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Quibusdam, est.
+            </p>
+            <a href="./blog-view.html" class="gradient btn">Read More</a>
+          </div>
+          <div class="article">
+            <img
+              class="article-img"
+              draggable="false"
+              src="../assets/article-2.webp"
+              alt="blog picture"
+            />
+            <h3 class="heading heading-secondary">Article 2</h3>
+            <p class="desc">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde,
+              excepturi.
+            </p>
+            <a href="./blog-view.html" class="gradient btn">Read More</a>
+          </div>
+          <div class="article">
+            <img
+              class="article-img"
+              draggable="false"
+              src="../assets/article-3.webp"
+              alt="blog picture"
+            />
+            <h3 class="heading heading-secondary">Article 3</h3>
+            <p class="desc">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Necessitatibus, reiciendis.
+            </p>
+            <a href="./blog-view.html" class="gradient btn">Read More</a>
+          </div>
+        </div>
+      </section>
+      <!-- Testimonials section -->
+      <section id="testimonials">
+        <h2 class="heading heading-main">Testimonials</h2>
+        <p class="desc">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo facilis
+          voluptas est, adipisci fugit exercitationem tempore. Hic officiis ex
+          cumque.
+        </p>
+        <div class="testimonial-container">
+          <div class="testimonial-element">
+            <p class="desc desc-testimonial">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius,
+              reprehenderit.
+            </p>
+            <div class="client-container">
+              <div class="client-img"></div>
+              <h3 class="heading heading-secondary">Client Name</h3>
+            </div>
+          </div>
+          <div class="testimonial-element">
+            <p class="desc desc-testimonial">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius,
+              reprehenderit.
+            </p>
+            <div class="client-container">
+              <div class="client-img"></div>
+              <h3 class="heading heading-secondary">Client Name</h3>
+            </div>
+          </div>
+          <div class="testimonial-element">
+            <p class="desc desc-testimonial">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius,
+              reprehenderit.
+            </p>
+            <div class="client-container">
+              <div class="client-img"></div>
+              <h3 class="heading heading-secondary">Client Name</h3>
+            </div>
+          </div>
+          <div class="testimonial-element">
+            <p class="desc desc-testimonial">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius,
+              reprehenderit.
+            </p>
+            <div class="client-container">
+              <div class="client-img"></div>
+              <h3 class="heading heading-secondary">Client Name</h3>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Contact section -->
+      <section id="contact">
+        <h2 class="heading heading-main">Get in Touch</h2>
+        <p class="desc">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo facilis
+          voluptas est, adipisci fugit exercitationem tempore. Hic officiis ex
+          cumque.
+        </p>
+        <form action="#" class="form">
+          <div class="form-group">
+            <label for="name" class="label">Name</label>
+            <input
+              type="text"
+              id="name"
+              class="input"
+              placeholder="Enter your name"
+            />
+          </div>
+          <div class="form-group">
+            <label for="email" class="label">Email</label>
+            <input
+              type="email"
+              id="email"
+              class="input"
+              placeholder="Enter your email"
+            />
+          </div>
+          <div class="form-group">
+            <label for="message" class="label">Message</label>
+            <textarea
+              name="message"
+              id="message"
+              cols="30"
+              rows="10"
+              class="input"
+              placeholder="Enter your message"
+            ></textarea>
+          </div>
+          <button class="gradient btn" id="contact-btn">Submit</button>
+        </form>
       </section>
     </main>
     <!-- Footer element -->
