fixed structure to work with deployment

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Sahil Shetty - Portfolio</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
 
@@ -21,7 +21,7 @@
       <nav>
         <img
           id="logo"
-          src="../assets/logo.svg"
+          src="./assets/logo.svg"
           alt="Sahil Shetty logo"
           draggable="false"
         />
@@ -115,7 +115,7 @@
           <img
             class="project-img"
             draggable="false"
-            src="../assets/movie-project.webp"
+            src="./assets/movie-project.webp"
             alt="movie project picture"
           />
         </div>
@@ -123,7 +123,7 @@
           <img
             class="project-img"
             draggable="false"
-            src="../assets/project-2.webp"
+            src="./assets/project-2.webp"
             alt="movie project picture"
           />
           <div class="project-desc">
@@ -150,7 +150,7 @@
             <img
               class="article-img"
               draggable="false"
-              src="../assets/article-1.webp"
+              src="./assets/article-1.webp"
               alt="blog picture"
             />
             <h3 class="heading heading-secondary">Article 1</h3>
@@ -164,7 +164,7 @@
             <img
               class="article-img"
               draggable="false"
-              src="../assets/article-2.webp"
+              src="./assets/article-2.webp"
               alt="blog picture"
             />
             <h3 class="heading heading-secondary">Article 2</h3>
@@ -178,7 +178,7 @@
             <img
               class="article-img"
               draggable="false"
-              src="../assets/article-3.webp"
+              src="./assets/article-3.webp"
               alt="blog picture"
             />
             <h3 class="heading heading-secondary">Article 3</h3>
@@ -289,5 +289,5 @@
       <p class="desc" id="footer">Made with &hearts; by Sahil Shetty</p>
     </footer>
   </body>
-  <script src="../js/main.js"></script>
+  <script src="./js/main.js"></script>
 </html>
