--- a/project-view.html
+++ b/project-view.html
@@ -9,14 +9,14 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Sahil Shetty - Portfolio</title>
   </head>
   <body>
     <!-- Header Section -->
     <header>
       <nav>
-        <img id="logo" src="../assets/logo.svg" alt="Sahil Shetty logo" />
+        <img id="logo" src="./assets/logo.svg" alt="Sahil Shetty logo" />
         <ul>
           <li><a href="./index.html#home">Home</a></li>
           <li><a href="./index.html#services">Services</a></li>
@@ -40,14 +40,14 @@
           <img
             class="project-img"
             draggable="false"
-            src="../assets/project-view-1.webp"
+            src="./assets/project-view-1.webp"
             alt="project screenshot"
           />
 
           <img
             class="project-img"
             draggable="false"
-            src="../assets/project-view-2.webp"
+            src="./assets/project-view-2.webp"
             alt="project screenshot"
           />
           <div class="project-view-desc">
